--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         alt="smily Icon"
         style="float: left; width: 100px; height: 100px"
       />
-      saadhana and Varsha is smily face
+      saaadhana and Varsha is smily face
     </p>
   </body>
 </html>
