--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h2>Funny Images</h2>
-    <p>Hi Everyone</p>
+    <p>Hi Everyone, welcome to my webpage</p>
 
     <img
       src="/images/Rose.jpg"
@@ -23,7 +23,6 @@
         alt="smily Icon"
         style="float: left; width: 100px; height: 100px"
       />
-      saaadhana and Varsha is smily face
     </p>
   </body>
 </html>
