--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         style="width: 128px; height: 128px"
       />
     </p>
-    <h3>Smily</h3>
+    <h3>Smily Face</h3>
     <p>
       <img
         src="/images/smily.gif"
