--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
   <body>
-    <h2>Funny Images</h2>
-    <p>Hi Everyone, welcome to my webpage</p>
+    <h2>Welcome to Our Website</h2>
+    <p style="font-family: Verdana, Geneva, Tahoma, sans-serif">
+      JS is a programming language that is one of the core technologies of the
+      <br /><br />
 
-    <img
-      src="/images/Rose.jpg"
-      alt="Rose Icon"
-      style="width: 100px; height: 100px"
-    />
-
-    <h3>Smily Face</h3>
-    <p>
-      <img
-        src="/images/smily.gif"
-        alt="smily Icon"
-        style="float: left; width: 100px; height: 100px"
-      />
+      <b>Worle Wide Web</b>, alongside
+      <span style="background-color: rgba(210, 105, 30, 0.806)"
+        >HTML and CSS</span
+      >.
     </p>
   </body>
 </html>
